research todo query filter